@@ -25,6 +25,7 @@ Fixes
 - FIX: format_time() - fix for data.frames columns being renamed on return (by using data.frame instead of cbind)
 - FIX: auto_rate() - Fix for plots failing where result contains an NA (fix in multi.p() involving clip)
 - FIX: import_file() - Fix for PreSens Oxyvew csv and txt files not being imported as numeric data. Now separate parsing for each.
+- FIX: import_file() - Fix for MiniDot files not being imported as numeric data.
 
 
 
